portainer/portainer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"portainer","app.kubernetes.io/name":"portainer","app.kubernetes.io/version":"ce-latest-ee-2.19.5","io.portainer.kubernetes.application.stack":"portainer"},"name":"portainer","namespace":"portainer"},"spec":{"replicas":1,"selector":{"matchLabels":{"app.kubernetes.io/instance":"portainer","app.kubernetes.io/name":"portainer"}},"strategy":{"type":"Recreate"},"template":{"metadata": [...]
  creationTimestamp: "2025-10-20T13:33:33Z"
  generation: 1
  labels:
    app.kubernetes.io/instance: portainer
    app.kubernetes.io/name: portainer
    app.kubernetes.io/version: ce-latest-ee-2.19.5
    io.portainer.kubernetes.application.stack: portainer
  name: portainer
  namespace: portainer
  resourceVersion: "1137"
  uid: 0dd0ef0e-c5ce-4976-bbb8-27f8eb97b030
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: portainer
      app.kubernetes.io/name: portainer
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: portainer
        app.kubernetes.io/name: portainer
    spec:
      containers:
      - args:
        - --tunnel-port=30776
        image: portainer/portainer-ce:2.19.5
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 9443
            scheme: HTTPS
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: portainer
        ports:
        - containerPort: 9000
          name: http
          protocol: TCP
        - containerPort: 9443
          name: https
          protocol: TCP
        - containerPort: 8000
          name: tcp-edge
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 9443
            scheme: HTTPS
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: portainer-sa-clusteradmin
      serviceAccountName: portainer-sa-clusteradmin
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: portainer
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-10-20T13:34:42Z"
    lastUpdateTime: "2025-10-20T13:34:42Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-10-20T13:33:33Z"
    lastUpdateTime: "2025-10-20T13:34:42Z"
    message: ReplicaSet "portainer-57fd49c474" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
