portainer/portainer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"portainer","app.kubernetes.io/name":"portainer","app.kubernetes.io/version":"ce-latest-ee-2.19.5","io.portainer.kubernetes.application.stack":"portainer"},"name":"portainer","namespace":"portainer"},"spec":{"ports":[{"name":"http","nodePort":30777,"port":9000,"protocol":"TCP","targetPort":9000},{"name":"https","nodePort":30779,"port":9443,"protocol":"TCP","targetPort":9443},{"name":"edg [...]
  creationTimestamp: "2025-10-20T13:33:33Z"
  labels:
    app.kubernetes.io/instance: portainer
    app.kubernetes.io/name: portainer
    app.kubernetes.io/version: ce-latest-ee-2.19.5
    io.portainer.kubernetes.application.stack: portainer
  name: portainer
  namespace: portainer
  resourceVersion: "1067"
  uid: b5bc147d-ff64-4428-883f-4a015650630c
spec:
  clusterIP: 10.43.181.245
  clusterIPs:
  - 10.43.181.245
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    nodePort: 30777
    port: 9000
    protocol: TCP
    targetPort: 9000
  - name: https
    nodePort: 30779
    port: 9443
    protocol: TCP
    targetPort: 9443
  - name: edge
    nodePort: 30776
    port: 30776
    protocol: TCP
    targetPort: 30776
  selector:
    app.kubernetes.io/instance: portainer
    app.kubernetes.io/name: portainer
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
